--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         <div class="col">
           <div class="about-info">
             <h3>My introduction</h3>
-            <p>A Web Developer with knowledge and skills in UI/UX Design, HTML5, CSS, Bootstrap, JavaScript, React, NodeJS, PHP, MySQL, database design, and front-end development. Skilled in collaborating with dynamic teams to construct high-quality websites and identifying opportunities to enhance user experiences. I am a problem solver passionate about programming, a quick learner, and always eager to explore new solutions in the world of coding. I am an effective team player in collaborative environments, adapting seamlessly to group dynamics, yet adept at working independently when needed.</p>
+            <p>A Web Developer with knowledge and skills in UI/UX Design, HTML5, CSS, Bootstrap, JavaScript, React, NodeJS, PHP, MySQL, database design and front-end development. Skilled in collaborating with dynamic teams to construct high-quality websites and identifying opportunities to enhance user experiences. I am a problem solver passionate about programming, a quick learner, and always eager to explore new solutions in the world of coding. I am an effective team player in collaborative environments, adapting seamlessly to group dynamics, yet adept at working independently when needed.</p>
             <hr>
             <div class="about-btn">
               <button  class="btn"><a href="cv.pdf" download="ErikG_cv.pdf" class="btn1"> Download CV <i class="fa fa-download"></i></a></button>
@@ -306,8 +306,8 @@
         <div class="col">
           <div class="contact-info">
             <h2>Find me  <i class="fa fa-arrow-down"></i></h2>
-            <p><a href="mailto:erik.georgievski@hotmail.com"><i class="fa fa-envelope-o"></i> erik.georgievski@hotmail.com</a></p>
-            <p> <a  class="tel:+46736233107" href="tel:+46736233107"><i class="fa fa-phone"></i>Tel: +46 736 233 107</a></p>
+            <p><a href="mailto:erik.georgievski@hotmail.com"><i class="fa fa-envelope-o" id="envelope"></i> erik.georgievski@hotmail.com</a></p>
+            <p> <a  class="tel:+46736233107" href="tel:+46736233107"><i class="fa fa-phone" id="phone"></i>Tel: +46 736 233 107</a></p>
 
           </div>
         </div>
