--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         <div class="col">
           <div class="about-info">
             <h3>My introduction</h3>
-            <p>A Web Developer with knowledge and skills in UI/UX Design, HTML5, CSS, Bootstrap, JavaScript, React, NodeJS, PHP, MySQL, database design and front-end development. Skilled in collaborating with dynamic teams to construct high-quality websites and identifying opportunities to enhance user experiences. I am a problem solver passionate about programming, a quick learner, and always eager to explore new solutions in the world of coding. I am an effective team player in collaborative environments, adapting seamlessly to group dynamics, yet adept at working independently when needed.</p>
+            <p>A Web Developer with knowledge and skills in UI/UX Design, HTML5, CSS, Bootstrap, JavaScript, React, NodeJS, PHP, WordPress, Magento, WooCommerce, Shopify,  MySQL, database design and front-end development. Skilled in collaborating with dynamic teams to construct high-quality websites and identifying opportunities to enhance user experiences. I am a problem solver passionate about programming, a quick learner, and always eager to explore new solutions in the world of coding. I am an effective team player in collaborative environments, adapting seamlessly to group dynamics, yet adept at working independently when needed.</p>
             <hr>
             <div class="about-btn">
               <button  class="btn"><a href="cv.pdf" download="ErikG_cv.pdf" class="btn1"> Download CV <i class="fa fa-download"></i></a></button>
@@ -146,14 +146,20 @@
             <div class="skills-header">
               <h3>Frontend</h3>
             </div>
-            <div class="skills-list">
+            <div class="skills-list" id="list">
               <span>HTML</span>
               <span>CSS</span>
               <span>Bootstrap</span>
               <span>JavaScript</span>
-              <span>REST APIs</span>
+              <span>RESTful</span>
+              <span>API</span>
+              <span>WordPress</span>
               <span>React</span>
               <span>Figma</span>
+              <span>WordPress</span>
+              <span>Magento</span>
+              <span>WooCommerce</span>
+              <span>Shopify</span>
               
 
             </div>
